src/ui/tests/snapshots/eks__ui__tests__golden__a_control_plane_log_waiting_out_throttling.snap
---
source: src/ui/tests/golden.rs
expression: "text(&frame(&control_plane_retrying(), WIDTH, HEIGHT))"
---
 eks │ beta (us-east-1)
┌ Clusters ────────────────────┐┌ Control plane › audit ───────────────────────────────────────────┐
│  alpha us-east-1             ││Context   arn:aws:eks:us-east-1:1234:cluster/beta                 │
│● beta us-east-1              ││Namespace default                                                 │
│  gamma us-east-1             ││Region    us-east-1                                               │
│                              ││Account   1234                                                    │
│                              ││                                                                  │
│                              ││api │ audit │ authenticator │ controller-manager │ scheduler      │
│                              ││Reading audit events in the last 1h from CloudWatch…              │
│                              ││AWS is throttling `aws logs filter-log-events`, and the AWS CLI's │
│                              ││own retries ran out.                                              │
│                              ││Trying again every 5s.                                            │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
 j/k scroll   t/T type   f follow   w wrap   ←/esc back   q quit   / search
