src/ui/tests/snapshots/eks__ui__tests__golden__the_audit_log_of_the_control_plane.snap
---
source: src/ui/tests/golden.rs
expression: "text(&frame(&control_plane_logs(), WIDTH, HEIGHT))"
---
 eks │ beta (us-east-1)
┌ Clusters ────────────────────┐┌ Control plane › audit ───────────────────────────────────────────┐
│  alpha us-east-1             ││Context   arn:aws:eks:us-east-1:1234:cluster/beta                 │
│● beta us-east-1              ││Namespace default                                                 │
│  gamma us-east-1             ││Region    us-east-1                                               │
│                              ││Account   1234                                                    │
│                              ││                                                                  │
│                              ││api │ audit │ authenticator │ controller-manager │ scheduler      │
│                              ││CONTROL PLANE  following · wrap off                               │
│                              ││2026-10-09T06:12:40Z  Admin/alice  get  pods shop/api-7f9c  200   │
│                              ││2026-10-09T06:12:41Z  Admin/alice  delete  pods shop/api-7f9c  200│
│                              ││2026-10-09T06:12:44Z  system:serviceaccount:kube-system:replicaset│
│                              ││2026-10-09T06:13:02Z  ci-deployer  patch  deployments shop/api  40│
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
 j/k scroll   t/T type   f follow   w wrap   ←/esc back   q quit   / search
