src/ui/tests/snapshots/eks__ui__tests__golden__the_containers_and_events_of_a_pod_in_colour.snap
---
source: src/ui/tests/golden.rs
expression: "styled(&frame(&pod_containers(), WIDTH, HEIGHT), Theme::dark())"
---
 eks │ beta (us-east-1)
┌ Clusters ────────────────────┐┌ Overview › ip-10-0-1-17.ec2.internal › worker-5b8c7d9f6-hj4lm ───┐
│  alpha us-east-1             ││Context   arn:aws:eks:us-east-1:1234:cluster/beta                 │
│● beta us-east-1              ││Namespace default                                                 │
│  gamma us-east-1             ││Region    us-east-1                                               │
│                              ││Account   1234                                                    │
│                              ││                                                                  │
│                              ││IP: 10.0.1.203                                                    │
│                              ││CONTAINERS                                                        │
│                              ││migrate (init)  Completed  ready  0  app:1.0                      │
│                              ││requests: cpu 0, memory 0  limits: cpu unlimited, memory unlimited│
│                              ││worker  CrashLoopBackOff  not ready  14  app:1.0                  │
│                              ││requests: cpu 250m, memory 512Mi  limits: cpu unlimited, memory   │
│                              ││unlimited                                                         │
│                              ││                                                                  │
│                              ││EVENTS                                                            │
│                              ││BackOff  40s ago (×61)                                            │
│                              ││Back-off restarting failed container worker                       │
│                              ││Pulled  2m ago (×15)                                              │
│                              ││Container image "app:1.0" already present on machine              │
│                              ││                                                                  │
│                              ││                                                                  │
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
 tab/→ switch/drill   j/k move   enter open   ←/esc back   r refresh   x shell   q quit   / filter

--- styles ---
0:0-4 fg=accent bg=default mod=BOLD
0:5-6 fg=muted bg=default mod=NONE
0:7-22 fg=text bg=default mod=BOLD
1:0-0 fg=border bg=default mod=NONE
1:1-10 fg=accent bg=default mod=BOLD
1:11-31 fg=border bg=default mod=NONE
1:32-32 fg=accent bg=default mod=NONE
1:33-95 fg=accent bg=default mod=BOLD
1:96-99 fg=accent bg=default mod=NONE
2:0-0 fg=border bg=default mod=NONE
2:1-2 fg=success bg=default mod=NONE
2:3-7 fg=text bg=default mod=NONE
2:9-17 fg=muted bg=default mod=NONE
2:31-31 fg=border bg=default mod=NONE
2:32-32 fg=accent bg=default mod=NONE
2:33-42 fg=muted bg=default mod=NONE
2:43-81 fg=text bg=default mod=NONE
2:99-99 fg=accent bg=default mod=NONE
3:0-0 fg=border bg=default mod=NONE
3:1-30 fg=text bg=selection_bg mod=BOLD
3:31-31 fg=border bg=default mod=NONE
3:32-32 fg=accent bg=default mod=NONE
3:33-42 fg=muted bg=default mod=NONE
3:43-49 fg=text bg=default mod=NONE
3:99-99 fg=accent bg=default mod=NONE
4:0-0 fg=border bg=default mod=NONE
4:1-2 fg=success bg=default mod=NONE
4:3-7 fg=text bg=default mod=NONE
4:9-17 fg=muted bg=default mod=NONE
4:31-31 fg=border bg=default mod=NONE
4:32-32 fg=accent bg=default mod=NONE
4:33-42 fg=muted bg=default mod=NONE
4:43-51 fg=text bg=default mod=NONE
4:99-99 fg=accent bg=default mod=NONE
5:0-0 fg=border bg=default mod=NONE
5:31-31 fg=border bg=default mod=NONE
5:32-32 fg=accent bg=default mod=NONE
5:33-42 fg=muted bg=default mod=NONE
5:43-46 fg=text bg=default mod=NONE
5:99-99 fg=accent bg=default mod=NONE
6:0-0 fg=border bg=default mod=NONE
6:31-31 fg=border bg=default mod=NONE
6:32-32 fg=accent bg=default mod=NONE
6:99-99 fg=accent bg=default mod=NONE
7:0-0 fg=border bg=default mod=NONE
7:31-31 fg=border bg=default mod=NONE
7:32-32 fg=accent bg=default mod=NONE
7:33-46 fg=muted bg=default mod=NONE
7:99-99 fg=accent bg=default mod=NONE
8:0-0 fg=border bg=default mod=NONE
8:31-31 fg=border bg=default mod=NONE
8:32-32 fg=accent bg=default mod=NONE
8:33-42 fg=accent bg=default mod=BOLD
8:99-99 fg=accent bg=default mod=NONE
9:0-0 fg=border bg=default mod=NONE
9:31-31 fg=border bg=default mod=NONE
9:32-32 fg=accent bg=default mod=NONE
9:33-48 fg=text bg=selection_bg mod=BOLD
9:49-57 fg=success bg=selection_bg mod=BOLD
9:58-59 fg=text bg=selection_bg mod=BOLD
9:60-64 fg=muted bg=selection_bg mod=BOLD
9:65-66 fg=text bg=selection_bg mod=BOLD
9:67-67 fg=muted bg=selection_bg mod=BOLD
9:68-69 fg=text bg=selection_bg mod=BOLD
9:70-76 fg=muted bg=selection_bg mod=BOLD
9:99-99 fg=accent bg=default mod=NONE
10:0-0 fg=border bg=default mod=NONE
10:31-31 fg=border bg=default mod=NONE
10:32-32 fg=accent bg=default mod=NONE
10:33-98 fg=muted bg=default mod=NONE
10:99-99 fg=accent bg=default mod=NONE
11:0-0 fg=border bg=default mod=NONE
11:31-31 fg=border bg=default mod=NONE
11:32-32 fg=accent bg=default mod=NONE
11:33-38 fg=text bg=default mod=NONE
11:41-56 fg=danger bg=default mod=NONE
11:59-67 fg=muted bg=default mod=NONE
11:70-71 fg=muted bg=default mod=NONE
11:74-80 fg=muted bg=default mod=NONE
11:99-99 fg=accent bg=default mod=NONE
12:0-0 fg=border bg=default mod=NONE
12:31-31 fg=border bg=default mod=NONE
12:32-32 fg=accent bg=default mod=NONE
12:33-95 fg=muted bg=default mod=NONE
12:99-99 fg=accent bg=default mod=NONE
13:0-0 fg=border bg=default mod=NONE
13:31-31 fg=border bg=default mod=NONE
13:32-32 fg=accent bg=default mod=NONE
13:33-41 fg=muted bg=default mod=NONE
13:99-99 fg=accent bg=default mod=NONE
14:0-0 fg=border bg=default mod=NONE
14:31-31 fg=border bg=default mod=NONE
14:32-32 fg=accent bg=default mod=NONE
14:99-99 fg=accent bg=default mod=NONE
15:0-0 fg=border bg=default mod=NONE
15:31-31 fg=border bg=default mod=NONE
15:32-32 fg=accent bg=default mod=NONE
15:33-38 fg=accent bg=default mod=BOLD
15:99-99 fg=accent bg=default mod=NONE
16:0-0 fg=border bg=default mod=NONE
16:31-31 fg=border bg=default mod=NONE
16:32-32 fg=accent bg=default mod=NONE
16:33-39 fg=warning bg=default mod=NONE
16:42-54 fg=muted bg=default mod=NONE
16:99-99 fg=accent bg=default mod=NONE
17:0-0 fg=border bg=default mod=NONE
17:31-31 fg=border bg=default mod=NONE
17:32-32 fg=accent bg=default mod=NONE
17:33-75 fg=muted bg=default mod=NONE
17:99-99 fg=accent bg=default mod=NONE
18:0-0 fg=border bg=default mod=NONE
18:31-31 fg=border bg=default mod=NONE
18:32-32 fg=accent bg=default mod=NONE
18:33-38 fg=text bg=default mod=NONE
18:41-52 fg=muted bg=default mod=NONE
18:99-99 fg=accent bg=default mod=NONE
19:0-0 fg=border bg=default mod=NONE
19:31-31 fg=border bg=default mod=NONE
19:32-32 fg=accent bg=default mod=NONE
19:33-84 fg=muted bg=default mod=NONE
19:99-99 fg=accent bg=default mod=NONE
20:0-0 fg=border bg=default mod=NONE
20:31-31 fg=border bg=default mod=NONE
20:32-32 fg=accent bg=default mod=NONE
20:99-99 fg=accent bg=default mod=NONE
21:0-0 fg=border bg=default mod=NONE
21:31-31 fg=border bg=default mod=NONE
21:32-32 fg=accent bg=default mod=NONE
21:99-99 fg=accent bg=default mod=NONE
22:0-31 fg=border bg=default mod=NONE
22:32-99 fg=accent bg=default mod=NONE
23:1-5 fg=accent bg=default mod=BOLD
23:6-21 fg=muted bg=default mod=NONE
23:22-24 fg=accent bg=default mod=BOLD
23:25-32 fg=muted bg=default mod=NONE
23:33-37 fg=accent bg=default mod=BOLD
23:38-45 fg=muted bg=default mod=NONE
23:46-50 fg=accent bg=default mod=BOLD
23:51-58 fg=muted bg=default mod=NONE
23:59-59 fg=accent bg=default mod=BOLD
23:60-70 fg=muted bg=default mod=NONE
23:71-71 fg=accent bg=default mod=BOLD
23:72-80 fg=muted bg=default mod=NONE
23:81-81 fg=accent bg=default mod=BOLD
23:82-89 fg=muted bg=default mod=NONE
23:90-90 fg=accent bg=default mod=BOLD
23:91-99 fg=muted bg=default mod=NONE
