src/ui/tests/snapshots/eks__ui__tests__golden__the_control_plane_log_in_colour.snap
---
source: src/ui/tests/golden.rs
expression: "styled(&frame(&control_plane_logs(), WIDTH, HEIGHT), Theme::dark())"
---
 eks │ beta (us-east-1)
┌ Clusters ────────────────────┐┌ Control plane › audit ───────────────────────────────────────────┐
│  alpha us-east-1             ││Context   arn:aws:eks:us-east-1:1234:cluster/beta                 │
│● beta us-east-1              ││Namespace default                                                 │
│  gamma us-east-1             ││Region    us-east-1                                               │
│                              ││Account   1234                                                    │
│                              ││                                                                  │
│                              ││api │ audit │ authenticator │ controller-manager │ scheduler      │
│                              ││CONTROL PLANE  following · wrap off                               │
│                              ││2026-10-09T06:12:40Z  Admin/alice  get  pods shop/api-7f9c  200   │
│                              ││2026-10-09T06:12:41Z  Admin/alice  delete  pods shop/api-7f9c  200│
│                              ││2026-10-09T06:12:44Z  system:serviceaccount:kube-system:replicaset│
│                              ││2026-10-09T06:13:02Z  ci-deployer  patch  deployments shop/api  40│
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
 j/k scroll   t/T type   f follow   w wrap   ←/esc back   q quit   / search

--- styles ---
0:0-4 fg=accent bg=default mod=BOLD
0:5-6 fg=muted bg=default mod=NONE
0:7-22 fg=text bg=default mod=BOLD
1:0-0 fg=border bg=default mod=NONE
1:1-10 fg=accent bg=default mod=BOLD
1:11-31 fg=border bg=default mod=NONE
1:32-32 fg=accent bg=default mod=NONE
1:33-55 fg=accent bg=default mod=BOLD
1:56-99 fg=accent bg=default mod=NONE
2:0-0 fg=border bg=default mod=NONE
2:1-2 fg=success bg=default mod=NONE
2:3-7 fg=text bg=default mod=NONE
2:9-17 fg=muted bg=default mod=NONE
2:31-31 fg=border bg=default mod=NONE
2:32-32 fg=accent bg=default mod=NONE
2:33-42 fg=muted bg=default mod=NONE
2:43-81 fg=text bg=default mod=NONE
2:99-99 fg=accent bg=default mod=NONE
3:0-0 fg=border bg=default mod=NONE
3:1-30 fg=text bg=selection_bg mod=BOLD
3:31-31 fg=border bg=default mod=NONE
3:32-32 fg=accent bg=default mod=NONE
3:33-42 fg=muted bg=default mod=NONE
3:43-49 fg=text bg=default mod=NONE
3:99-99 fg=accent bg=default mod=NONE
4:0-0 fg=border bg=default mod=NONE
4:1-2 fg=success bg=default mod=NONE
4:3-7 fg=text bg=default mod=NONE
4:9-17 fg=muted bg=default mod=NONE
4:31-31 fg=border bg=default mod=NONE
4:32-32 fg=accent bg=default mod=NONE
4:33-42 fg=muted bg=default mod=NONE
4:43-51 fg=text bg=default mod=NONE
4:99-99 fg=accent bg=default mod=NONE
5:0-0 fg=border bg=default mod=NONE
5:31-31 fg=border bg=default mod=NONE
5:32-32 fg=accent bg=default mod=NONE
5:33-42 fg=muted bg=default mod=NONE
5:43-46 fg=text bg=default mod=NONE
5:99-99 fg=accent bg=default mod=NONE
6:0-0 fg=border bg=default mod=NONE
6:31-31 fg=border bg=default mod=NONE
6:32-32 fg=accent bg=default mod=NONE
6:99-99 fg=accent bg=default mod=NONE
7:0-0 fg=border bg=default mod=NONE
7:31-31 fg=border bg=default mod=NONE
7:32-32 fg=accent bg=default mod=NONE
7:33-38 fg=muted bg=default mod=NONE
7:39-43 fg=text bg=selection_bg mod=BOLD
7:44-92 fg=muted bg=default mod=NONE
7:99-99 fg=accent bg=default mod=NONE
8:0-0 fg=border bg=default mod=NONE
8:31-31 fg=border bg=default mod=NONE
8:32-32 fg=accent bg=default mod=NONE
8:33-45 fg=accent bg=default mod=BOLD
8:46-67 fg=muted bg=default mod=NONE
8:99-99 fg=accent bg=default mod=NONE
9:0-0 fg=border bg=default mod=NONE
9:31-31 fg=border bg=default mod=NONE
9:32-32 fg=accent bg=default mod=NONE
9:33-92 fg=text bg=default mod=NONE
9:93-95 fg=success bg=default mod=NONE
9:99-99 fg=accent bg=default mod=NONE
10:0-0 fg=border bg=default mod=NONE
10:31-31 fg=border bg=default mod=NONE
10:32-32 fg=accent bg=default mod=NONE
10:33-95 fg=text bg=default mod=NONE
10:96-98 fg=success bg=default mod=NONE
10:99-99 fg=accent bg=default mod=NONE
11:0-0 fg=border bg=default mod=NONE
11:31-31 fg=border bg=default mod=NONE
11:32-32 fg=accent bg=default mod=NONE
11:33-98 fg=text bg=default mod=NONE
11:99-99 fg=accent bg=default mod=NONE
12:0-0 fg=border bg=default mod=NONE
12:31-31 fg=border bg=default mod=NONE
12:32-32 fg=accent bg=default mod=NONE
12:33-96 fg=text bg=default mod=NONE
12:97-98 fg=warning bg=default mod=NONE
12:99-99 fg=accent bg=default mod=NONE
13:0-0 fg=border bg=default mod=NONE
13:31-31 fg=border bg=default mod=NONE
13:32-32 fg=accent bg=default mod=NONE
13:99-99 fg=accent bg=default mod=NONE
14:0-0 fg=border bg=default mod=NONE
14:31-31 fg=border bg=default mod=NONE
14:32-32 fg=accent bg=default mod=NONE
14:99-99 fg=accent bg=default mod=NONE
15:0-0 fg=border bg=default mod=NONE
15:31-31 fg=border bg=default mod=NONE
15:32-32 fg=accent bg=default mod=NONE
15:99-99 fg=accent bg=default mod=NONE
16:0-0 fg=border bg=default mod=NONE
16:31-31 fg=border bg=default mod=NONE
16:32-32 fg=accent bg=default mod=NONE
16:99-99 fg=accent bg=default mod=NONE
17:0-0 fg=border bg=default mod=NONE
17:31-31 fg=border bg=default mod=NONE
17:32-32 fg=accent bg=default mod=NONE
17:99-99 fg=accent bg=default mod=NONE
18:0-0 fg=border bg=default mod=NONE
18:31-31 fg=border bg=default mod=NONE
18:32-32 fg=accent bg=default mod=NONE
18:99-99 fg=accent bg=default mod=NONE
19:0-0 fg=border bg=default mod=NONE
19:31-31 fg=border bg=default mod=NONE
19:32-32 fg=accent bg=default mod=NONE
19:99-99 fg=accent bg=default mod=NONE
20:0-0 fg=border bg=default mod=NONE
20:31-31 fg=border bg=default mod=NONE
20:32-32 fg=accent bg=default mod=NONE
20:99-99 fg=accent bg=default mod=NONE
21:0-0 fg=border bg=default mod=NONE
21:31-31 fg=border bg=default mod=NONE
21:32-32 fg=accent bg=default mod=NONE
21:99-99 fg=accent bg=default mod=NONE
22:0-31 fg=border bg=default mod=NONE
22:32-99 fg=accent bg=default mod=NONE
23:1-3 fg=accent bg=default mod=BOLD
23:4-13 fg=muted bg=default mod=NONE
23:14-16 fg=accent bg=default mod=BOLD
23:17-24 fg=muted bg=default mod=NONE
23:25-25 fg=accent bg=default mod=BOLD
23:26-35 fg=muted bg=default mod=NONE
23:36-36 fg=accent bg=default mod=BOLD
23:37-44 fg=muted bg=default mod=NONE
23:45-49 fg=accent bg=default mod=BOLD
23:50-57 fg=muted bg=default mod=NONE
23:58-58 fg=accent bg=default mod=BOLD
23:59-66 fg=muted bg=default mod=NONE
23:67-67 fg=accent bg=default mod=BOLD
23:68-77 fg=muted bg=default mod=NONE
