src/ui/tests/snapshots/eks__ui__tests__golden__the_control_plane_log_on_an_80_by_24_terminal.snap
---
source: src/ui/tests/golden.rs
expression: "text(&frame(&control_plane_logs(), 80, 24))"
---
 eks │ beta (us-east-1)
┌ Clusters ──────────────┐┌ Control plane › audit ─────────────────────────────┐
│  alpha us-east-1       ││Context   arn:aws:eks:us-east-1:1234:cluster/beta   │
│● beta us-east-1        ││Namespace default                                   │
│  gamma us-east-1       ││Region    us-east-1                                 │
│                        ││Account   1234                                      │
│                        ││                                                    │
│                        ││api │ audit │ authenticator │ controller-manager    │
│                        ││scheduler                                           │
│                        ││CONTROL PLANE  following · wrap off                 │
│                        ││2026-10-09T06:12:40Z  Admin/alice  get  pods shop/ap│
│                        ││2026-10-09T06:12:41Z  Admin/alice  delete  pods shop│
│                        ││2026-10-09T06:12:44Z  system:serviceaccount:kube-sys│
│                        ││2026-10-09T06:13:02Z  ci-deployer  patch  deployment│
│                        ││                                                    │
│                        ││                                                    │
│                        ││                                                    │
│                        ││                                                    │
│                        ││                                                    │
│                        ││                                                    │
│                        ││                                                    │
│                        ││                                                    │
└────────────────────────┘└────────────────────────────────────────────────────┘
 j/k scroll   t/T type   f follow   w wrap   ←/esc back   q quit   / search
