src/ui/tests/snapshots/eks__ui__tests__golden__the_dashboard_with_no_clusters_in_the_kubeconfig.snap
---
source: src/ui/tests/golden.rs
expression: "text(&frame(&App::new(Vec::new()), WIDTH, HEIGHT))"
---
 eks │ no cluster
┌ Clusters ────────────────────┐┌ Overview ────────────────────────────────────────────────────────┐
│                              ││No clusters in your kubeconfig. Run `aws eks update-kubeconfig    │
│                              ││--name <cluster>`.                                                │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
 tab/→ switch/drill   j/k move   C audit log   ←/esc back   r refresh   s/S sort   q quit   / filter
