src/ui/tests/snapshots/eks__ui__tests__golden__the_forwards_strip_with_one_forward_lost_to_its_pod.snap
---
source: src/ui/tests/golden.rs
expression: "text(&frame(&forwarding_with_one_lost(), WIDTH, 30))"
---
 eks │ beta (us-east-1)
┌ Clusters ────────────────────┐┌ Overview ────────────────────────────────────────────────────────┐
│  alpha us-east-1             ││Context   arn:aws:eks:us-east-1:1234:cluster/beta                 │
│● beta us-east-1              ││Namespace default                                                 │
│  gamma us-east-1             ││Region    us-east-1                                               │
│                              ││Account   1234                                                    │
│                              ││                                                                  │
│                              ││NODES                                                             │
│                              ││ip-10-0-1-17.ec2.internal  Ready  CPU ██░░░░░░░░ 900m  MEM        │
│                              ││████░░░░░░ 6Gi  23/58 pods                                        │
│                              ││ip-10-0-2-40.ec2.internal  Ready  CPU █████████░ 3500m  MEM       │
│                              ││████████░░ 13Gi  23/58 pods                                       │
│                              ││ip-10-0-3-8.ec2.internal  NotReady  CPU ░░░░░░░░░░ -  MEM         │
│                              ││░░░░░░░░░░ -  23/58 pods                                          │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
 Forwards · they end when eks quits · c clears stopped ─────────────────────────────────────────────
 http://127.0.0.1:8080 → pod api-7d9f8b6c4-x2kqp port 8080  2 connections
   pod api-7d9f8b6c4-x2kqp refused a connection on port 8080: nothing in it is listening there.
 pod api-7d9f8b6c4-x2kqp port 9090  starting…
 pod ledger-0 port 5432  stopped
   pod ledger-0 was deleted, so there is nothing left to forward to.
   StatefulSet ledger will recreate it under the same name: press f on its port again once it is
 Running.
 tab/→ switch/drill   j/k move   enter open   ←/esc back   r refresh   s/S sort   q quit   / filter
